[Sealed unions] Make `toString` backward compatible (#2753)
[Sealed unions] Make `toString` backward compatible